fixed mobile menu spacing

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ nav {
     display: none;
     z-index: 1;
     position: fixed;
-    top: 80px;
+    top: 70px;
     left: 0;
     height: 100vh;
     width: 100vw;
